--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -64,7 +64,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <com.example.sdist.testingproject.FaceTracker.camera.CameraSourcePreview.facetracker.camera.CameraSourcePreview
+        <com.example.sdist.testingproject.FaceTracker.camera.CameraSourcePreview
             android:id="@+id/preview"
             android:layout_width="wrap_content"
             android:layout_height="512dp"
@@ -76,7 +76,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-        </com.example.sdist.testingproject.FaceTracker.camera.CameraSourcePreview.facetracker.camera.CameraSourcePreview>
+        </com.example.sdist.testingproject.FaceTracker.camera.CameraSourcePreview>
 
         <LinearLayout
             android:layout_width="match_parent"
