--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -71,7 +71,7 @@
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="8dp">
 
-            <com.example.sdist.testingproject.FaceTracker.camera
+            <com.example.sdist.testingproject.FaceTracker.camera.GraphicOverlay
                 android:id="@+id/faceOverlay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -114,4 +114,5 @@
                 tools:background="#ffffff" />
         </LinearLayout>
     </LinearLayout>
+
 </LinearLayout>
