--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -64,19 +64,19 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <com.example.sdist.testingproject.FaceTracker.camera.CameraSourcePreview.facetracker.camera.CameraSourcePreview
+        <com.example.sdist.testingproject.FaceTracker.camera.CameraSourcePreview
             android:id="@+id/preview"
             android:layout_width="wrap_content"
             android:layout_height="512dp"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="8dp">
 
-            <com.example.sdist.testingproject.FaceTracker.camera
+            <com.example.sdist.testingproject.FaceTracker.camera.GraphicOverlay
                 android:id="@+id/faceOverlay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-        </com.example.sdist.testingproject.FaceTracker.camera.CameraSourcePreview.facetracker.camera.CameraSourcePreview>
+        </com.example.sdist.testingproject.FaceTracker.camera.CameraSourcePreview>
 
         <LinearLayout
             android:layout_width="match_parent"
