--- a/app/src/main/res/layout/activity_friendlist.xml
+++ b/app/src/main/res/layout/activity_friendlist.xml
@@ -18,8 +18,7 @@
         <ListView
             android:id="@+id/list_of_friends"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_height="513dp" />
 
         <!--<LinearLayout-->
             <!--android:layout_width="match_parent"-->
