--- a/app/src/main/res/layout/activity_type_message_area.xml
+++ b/app/src/main/res/layout/activity_type_message_area.xml
@@ -17,8 +17,7 @@
         <ListView
             android:id="@+id/list_of_messages"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_height="530dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
