--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/root_layout"
-    tools:context="com.example.sdist.testingproject.MainActivity"
+    tools:context="com.example.sdist.testingproject.Activity_Main"
     android:fitsSystemWindows="true">
 
     <ScrollView
