--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.sdist.testingproject.SignUpActivity">
+    tools:context="com.example.sdist.testingproject.Activity_SignUp">
 
     <ScrollView
         android:layout_width="0dp"
