--- a/app/src/main/res/layout/activity_stories.xml
+++ b/app/src/main/res/layout/activity_stories.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.sdist.testingproject.Stories">
+    tools:context="com.example.sdist.testingproject.Activity_Stories">
 
     <LinearLayout
         android:layout_width="match_parent"
