--- a/app/src/main/res/layout/activity_type_message_area.xml
+++ b/app/src/main/res/layout/activity_type_message_area.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.sdist.testingproject.type_message_area">
+    tools:context="com.example.sdist.testingproject.Activity_MessageArea">
 
     <LinearLayout
         android:layout_width="match_parent"
