--- a/app/src/main/res/layout/content_homepage.xml
+++ b/app/src/main/res/layout/content_homepage.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.sdist.testingproject.homepage"
+    tools:context="com.example.sdist.testingproject.Activity_Homepage"
     tools:showIn="@layout/app_bar_homepage">
 
     <ScrollView
