--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
                 android:text="CamShot"
                 android:textSize="45dp"
                 android:gravity="center"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/black"
                 android:fontFamily="sans-serif-condensed"
                 android:textStyle="bold"
                 android:drawableLeft="@drawable/ic_camera_black_24dp"
