--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,10 +4,10 @@
     <color name="colorPrimaryDark">#39000000</color>
     <color name="colorAccent">#5d99b1</color>
     <color name="black_overlay">#66000000</color>
-    <color name="light_font">#FBFBFB</color>
+    <color name="light_font">#363636</color>
     <color name="grey_font">#ff9e9e9e</color>
     <color name="text_shadow">#7F000000</color>
-    <color name="text_shadow_white">#FFFFFF</color>
+    <color name="text_shadow_white">#000000</color>
 
     <color name="button_unclicked">#b531a680</color>
     <color name="button_clicked">#325aa3cd</color>
