--- a/app/src/main/res/layout/friend.xml
+++ b/app/src/main/res/layout/friend.xml
@@ -6,11 +6,14 @@
 
     <TextView
         android:id="@+id/friend"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textStyle="normal|bold"
-        android:textSize="5dp"
-        android:paddingTop="3dip"
-        android:paddingBottom="3dip"/>
+        android:text="Mahal0h_6969"
+        android:textSize="20dp"
+        android:fontFamily="sans-serif"
+        android:textColor="@android:color/white"
+        android:padding="10dp"
+        />
 
 </LinearLayout>
