--- a/app/src/main/res/layout/activity_friendlist.xml
+++ b/app/src/main/res/layout/activity_friendlist.xml
@@ -14,6 +14,19 @@
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp">
 
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:drawableLeft="@drawable/ic_account"
+            android:fontFamily="sans-serif"
+            android:gravity="center"
+            android:paddingLeft="10dp"
+            android:text="Friends"
+            android:textColor="@android:color/white"
+            android:textSize="35dp"
+            android:textStyle="bold" />
 
         <ListView
             android:id="@+id/list_of_friends"
