--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -67,7 +67,7 @@
         <com.example.sdist.testingproject.FaceTracker.camera.CameraSourcePreview
             android:id="@+id/preview"
             android:layout_width="wrap_content"
-            android:layout_height="512dp"
+            android:layout_height="540dp"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="8dp">
 
@@ -98,8 +98,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="#ffffff"/>
-                <!--app:srcCompat="@mipmap/flash_on" />-->
+                android:background="#ffffff"
+                app:srcCompat="@mipmap/flash_on" />
 
             <ImageButton
                 android:id="@+id/btnCapture"
