--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -8,120 +8,128 @@
     android:orientation="vertical"
     tools:context="com.example.sdist.testingproject.FaceTracker.CameraActivity">
 
-    <LinearLayout
-        android:id="@+id/previewLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/imgViewPreview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@color/common_google_signin_btn_text_dark_focused" />
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:id="@+id/cameraLayout"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/btnBack2"
-                style="?android:attr/borderlessButtonStyle"
+            <com.example.sdist.testingproject.FaceTracker.camera.CameraSourcePreview
+                android:id="@+id/preview"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
+
+                <com.example.sdist.testingproject.FaceTracker.camera.GraphicOverlay
+                    android:id="@+id/faceOverlay"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </com.example.sdist.testingproject.FaceTracker.camera.CameraSourcePreview>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="#ffffff"
-                app:srcCompat="@mipmap/back_arrow" />
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                >
 
-            <ImageButton
-                android:id="@+id/btnSave"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="#ffffff"
-                android:gravity="center"
-                app:srcCompat="@mipmap/save_image" />
+                <ImageButton
+                    android:id="@+id/btnBack"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="#ffffff"
+                    app:srcCompat="@mipmap/back_arrow" />
 
-            <ImageButton
-                android:id="@+id/btnSend"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="#ffffff"
-                android:gravity="right"
-                app:srcCompat="@mipmap/send_image" />
-        </LinearLayout>
-
-</LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/cameraLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <com.example.sdist.testingproject.FaceTracker.camera.CameraSourcePreview
-            android:id="@+id/preview"
-            android:layout_width="wrap_content"
-            android:layout_height="512dp"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="8dp">
-
-            <com.example.sdist.testingproject.FaceTracker.camera.GraphicOverlay
-                android:id="@+id/faceOverlay"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </com.example.sdist.testingproject.FaceTracker.camera.CameraSourcePreview>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:id="@+id/btnBack"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="#ffffff"
-                app:srcCompat="@mipmap/back_arrow" />
-
-            <ImageButton
-                android:id="@+id/btnFlash"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="#ffffff"/>
+                <ImageButton
+                    android:id="@+id/btnFlash"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="#ffffff" />
                 <!--app:srcCompat="@mipmap/flash_on" />-->
 
-            <ImageButton
-                android:id="@+id/btnCapture"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="#ffffff"
-                android:gravity="center"
-                app:srcCompat="@mipmap/take_picture" />
+                <ImageButton
+                    android:id="@+id/btnCapture"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="#ffffff"
+                    android:gravity="center"
+                    app:srcCompat="@mipmap/take_picture" />
 
-            <ImageButton
-                android:id="@+id/btnSwitchCam"
-                style="?android:attr/borderlessButtonStyle"
+                <ImageButton
+                    android:id="@+id/btnSwitchCam"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="#ffffff"
+                    android:gravity="right"
+                    app:srcCompat="@mipmap/switch_to_front_cam"
+                    tools:background="#ffffff" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/previewLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_alignParentBottom="true"
+            >
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="#ffffff"
-                android:gravity="right"
-                app:srcCompat="@mipmap/switch_to_front_cam"
-                tools:background="#ffffff" />
+                android:orientation="horizontal"
+                android:gravity="center"
+                >
+
+                <ImageButton
+                    android:id="@+id/btnBack2"
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    android:background="@drawable/circle_button"
+                    android:src="@drawable/ic_chevron_left" />
+
+                <ImageButton
+                    android:id="@+id/btnSave"
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    android:background="@drawable/circle_button"
+                    android:gravity="center"
+                    app:srcCompat="@mipmap/save_image"
+                    android:layout_margin="25dp"
+                    />
+
+                <ImageButton
+                    android:id="@+id/btnSend"
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    android:background="@drawable/circle_button"
+                    android:gravity="right"
+                    android:src="@drawable/ic_send" />
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/imgViewPreview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@color/common_google_signin_btn_text_dark_focused" />
+
+
         </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
+
 
 </LinearLayout>
