--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -37,10 +37,12 @@
 
 
         <RelativeLayout
+            android:id="@+id/cam_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="10dp"
+            android:visibility="visible"
             >
 
             <LinearLayout
@@ -95,6 +97,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_alignParentBottom="true"
+            android:visibility="invisible"
             >
 
             <LinearLayout
