--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -105,14 +105,15 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center"
-                >
+                android:weightSum="1">
 
                 <ImageButton
                     android:id="@+id/btnBack2"
                     android:layout_width="72dp"
                     android:layout_height="72dp"
                     android:background="@drawable/circle_button"
-                    android:src="@drawable/ic_chevron_left" />
+                    android:src="@drawable/ic_chevron_left"
+                    android:layout_weight="0.05" />
 
                 <ImageButton
                     android:id="@+id/btnSave"
