--- a/app/src/main/res/layout/story.xml
+++ b/app/src/main/res/layout/story.xml
@@ -3,27 +3,33 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/story_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="xxx"
-        android:layout_alignBottom="@+id/message_user" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/message_user"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="50dp"
             android:layout_weight="1"
-            android:paddingBottom="3dip"
-            android:paddingTop="3dip"
             android:textSize="5dp"
             android:textStyle="normal|bold" />
+
+        <TextView
+            android:id="@+id/story_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="xxx"
+            android:textSize="12dp"
+            />
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="25dp" />
     </LinearLayout>
 
 </LinearLayout>
