--- a/app/src/main/res/layout/story.xml
+++ b/app/src/main/res/layout/story.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -24,8 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="xxx"
-            android:textSize="12dp"
-            />
+            android:textSize="12dp" />
 
         <Space
             android:layout_width="wrap_content"
