--- a/app/src/main/res/layout/story.xml
+++ b/app/src/main/res/layout/story.xml
@@ -1,34 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
 
-    <LinearLayout
-        android:layout_width="fill_parent"
+
+    <ImageView
+        android:id="@+id/message_user"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="50dp"
+        android:textSize="5dp"
+        android:textStyle="normal|bold" />
+
+    <TextView
+        android:id="@+id/story_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="xxx"
         android:gravity="center"
-        android:orientation="vertical">
+        android:textSize="12dp" />
 
-        <ImageView
-            android:id="@+id/message_user"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="50dp"
-            android:layout_weight="1"
-            android:textSize="5dp"
-            android:textStyle="normal|bold" />
-
-        <TextView
-            android:id="@+id/story_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="xxx"
-            android:textSize="12dp" />
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="25dp" />
-    </LinearLayout>
 
 </LinearLayout>
